--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@ permalink: /about
       <h3 class="lead">  About our Firm : </h3><hr>
 
       <p>Curabitur vulputate, ligula lacinia scelris que tempor, lacus lacus ornare ante, ac egeistas est urna sit amet arcu. Class apte nt taeraciti sociosqu ad litora torquent.</p>
-      <a href="#anchor1"> Our Firm's History</a><br>
-      <a href="#anchor2"> Philosophy</a><br>
+      <a href="#anchor1"> Servicios</a><br>
+      <a href="#anchor2"> Formas de pago</a><br>
       <a href="#anchor3">Media / In the Press</a><br>
       <br>
       <h4>2002 - LOREM IPSUM DOLOR :</h4><hr>
