--- a/about.html
+++ b/about.html
@@ -15,9 +15,7 @@ permalink: /about
     <div class="side-left col-sm-4 col-md-4">
       <h3 class="lead">  PAPELERÍA TRÉBOL </h3><hr>
 
-      <p>1
-      2
-      2</p>
+      <p>A continuación te explicaremos un poco sobre lo que nuestra papelería de ofrece:</p>
       <a href="#anchor1"> Servicios</a><br>
       <a href="#anchor2"> Formas de pago</a><br>
       <a href="#anchor3">Horarios</a><br>
