--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@ permalink: /about
       <a href="#anchor2"> Formas de pago</a><br>
       <a href="#anchor3">Horarios</a><br>
       <br>
-      <h4>2002 - LOREM IPSUM DOLOR :</h4><hr>
-      Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.
+      <h4>2020 :</h4><hr>
+      Nuestros inicios son a partir del año 2020 a principios de pandemia, poco a poco nuestro megocio ha ido creciendo y prosperando. Agradecemos a todos nuestros clientes por su preferencia y confianza.
     </div>
     <div class="col-sm-8 col-md-8">
         <h3 class="lead"id="anchor1"> Servicios </h3><hr>
