--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ permalink: /about
     <div class="col-sm-8 col-md-8">
         <h3 class="lead"id="anchor1"> Servicios </h3><hr>
         <p>
-          
+        Además de contar con objetos o mercancía de papelería (objetos básicos), también ofrecemos algunos otors servicios:
         </p>
 
         <h4>2002 - LOREM IPSUM DOLOR</h4>
