--- a/about.html
+++ b/about.html
@@ -29,8 +29,12 @@ permalink: /about
         Además de contar con objetos o mercancía de papelería (objetos básicos), también ofrecemos algunos otors servicios:
         </p>
 
-        <h4>2002 - LOREM IPSUM DOLOR</h4>
-        <p>Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus. Nunc eu ullamcor per orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus.</p>
+        <h4>DOCUMENTOS ACTUALIZADOS</h4>
+        <p>Si tienes que actualizar algún documento pero no quieres ir a los lugares que te mandan, nosotros podemos ayudarte´, algunos de estos documentos tienen una comisión.
+      Actualizamos actas de nacimiento, su precio varía dependiendo del estado del acta, con una comisión de $30.
+          <p>
+      CURP actualizada, solo necesitamos tu curp en caso de que la tengas o tus datos personales.
+          </p>
 
         <h4>2007 - VIVAMUS HENDERIT</h4>
         <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
