--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@ permalink: /about
         <h4>DOCUMENTOS ACTUALIZADOS</h4>
         <p>Si tienes que actualizar algún documento pero no quieres ir a los lugares que te mandan, nosotros podemos ayudarte´, algunos de estos documentos tienen una comisión.
           <p>
-          Actualizamos actas de nacimiento, su precio varía dependiendo del estado del acta, con una comisión de $30.
+      -Actualizamos actas de nacimiento, su precio varía dependiendo del estado del acta, con una comisión de $30.
           </p>  
           <p>
-      CURP actualizada, solo necesitamos tu curp en caso de que la tengas o tus datos personales.
+      -CURP actualizada, solo necesitamos tu curp en caso de que la tengas o tus datos personales.
           </p>
 
         <h4>2007 - VIVAMUS HENDERIT</h4>
