--- a/about.html
+++ b/about.html
@@ -37,7 +37,9 @@ permalink: /about
           <p>
       -CURP actualizada, solo necesitamos tu curp en caso de que la tengas o tus datos personales.
           </p>
-
+          <p>
+      -Número de seguro social
+         </p>   
         <h4>2007 - VIVAMUS HENDERIT</h4>
         <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
 
