--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@ permalink: /about
           <p>
       -Número de seguro social
          </p>   
-        <h4>2007 - VIVAMUS HENDERIT</h4>
-        <p>Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna.</p>
+        <h4>Inscripciones</h4>
+        <p>Realizamos inscripciones de SAID a kinder, primaria y secundaria para alumnos de nuevo ingreso. Ahora también hacemos registros para nivel medio superios COMIPEMS.</p>
 
         <h4>2008 - PRAESENT ID METUS</h4>
         <p>
