--- a/about.html
+++ b/about.html
@@ -43,9 +43,11 @@ permalink: /about
         <h4>Inscripciones</h4>
         <p>Realizamos inscripciones de SAID a kinder, primaria y secundaria para alumnos de nuevo ingreso. Ahora también hacemos registros para nivel medio superios COMIPEMS.</p>
 
-        <h4>2008 - PRAESENT ID METUS</h4>
+        <h4>Trabajos de investigación</h4>
         <p>
-          Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor posuere. Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio.
+          Queremos aclarar que no somos un internet, pero podemos ayudarte a hacer algunos trabajos de investigación, en algunos casos no podremos ayudarte
+          pues muchos de los trabajos que nos piden requieren de ciertas especificaciones que con las apps del celular no podemos realizar, y al no contar
+          con el equipo necesario, no se nos hace posible realizarlos.
         </p>
         <h3 class="lead"id="anchor2">Formas de Pago</h3>
         <p>
