--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@ permalink: /about
 
         <h3 class="lead"id="anchor3">Horarios</h3>
         <blockquote>
-          <em>Donec congue lacinia dui, a porttitor lectus condimentum oreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus e vestibulum faucibus et in metus. In pellentesque faucibus vestibulum. Nulla nulla justo, eget luctus tortor dolor sit amet lipsum odio lectus congue.</em>
+          <em>Estimado cliente entendemos que en ocasiones no puedes venir a la hora en la que abrimos y cerramos. Pero te pedimos que respetes este horario que te proporcionamos. Si se te hace imposible venir en los horarios establecidos, puedes mandarnos un mensaje y decirnos la hora a la que pasarás por tus impresiones o productos.</em>
         </blockquote>
-        <p class="block-author"> MARCIA HERNANDEZ, CLIENT</p>
+        <p class="block-author"> PAPELERÍA TRÉBOL</p>
         <br><br>
         <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p></p>
     </div>  
