--- a/about.html
+++ b/about.html
@@ -62,7 +62,9 @@ permalink: /about
         </blockquote>
         <p class="block-author"> PAPELERÍA TRÉBOL</p>
         <br><br>
-        <p>Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc.</p></p>
+        <p>LUNES: 7:00 AM - 8:00 PM</p>
+        <p>MARTES: 7:00 AM - 8:00 PM</p></p>
+      </p>
     </div>  
   </div>    
 </div>  
