--- a/about.html
+++ b/about.html
@@ -62,8 +62,13 @@ permalink: /about
         </blockquote>
         <p class="block-author"> PAPELERÍA TRÉBOL</p>
         <br><br>
-        <p>LUNES: 7:00 AM - 8:00 PM</p>
-        <p>MARTES: 7:00 AM - 8:00 PM</p></p>
+        <p>LUNES:      7:00 AM - 8:00 PM</p>
+        <p>MARTES:     7:00 AM - 8:00 PM</p>
+        <p>MIÉRCOLES:  7:00 AM - 8:00 PM<p>
+        <p>JUEVES:     7:00 AM - 8:00 PM<p>
+        <p>VIERNES:    7:00 AM - 8:00 PM<p>
+        <p>SÁBADO:     7:00 AM - 8:00 PM<p>
+        <p>DOMINGO:    7:00 AM - 8:00 PM<p></p>
       </p>
     </div>  
   </div>    
