--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ permalink: /about
     <div class="side-left col-sm-4 col-md-4">
       <h3 class="lead">  PAPELERÍA TRÉBOL </h3><hr>
 
-      <p>A continuación te explicaremos un poco sobre lo que nuestra papelería de ofrece:</p>
+      <p>A continuación te explicaremos un poco sobre lo que nuestra papelería te ofrece:</p>
       <a href="#anchor1"> Servicios</a><br>
       <a href="#anchor2"> Formas de pago</a><br>
       <a href="#anchor3">Horarios</a><br>
@@ -26,7 +26,7 @@ permalink: /about
     <div class="col-sm-8 col-md-8">
         <h3 class="lead"id="anchor1"> Servicios </h3><hr>
         <p>
-        Además de contar con objetos o mercancía de papelería (objetos básicos), sacamos impresiones, copias, engargolados..., también ofrecemos algunos otors servicios:
+        Además de contar con objetos o mercancía de papelería (objetos básicos), sacamos impresiones, copias, engargolados..., también ofrecemos algunos otros servicios:
         </p>
 
         <h4>DOCUMENTOS ACTUALIZADOS</h4>
