--- a/team.html
+++ b/team.html
@@ -13,10 +13,10 @@ permalink: /team
           <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          John Doe
+          Alejandra Lorenzo
         </h4>
         <p>
-          Web Developer , Technext
+          Jefa
         </p>
       </div>
       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
@@ -24,10 +24,10 @@ permalink: /team
           <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jane Ley
+          Erick González
         </h4>
         <p>
-          Software Developer , Technext
+          Empleado
         </p>
       </div>
       <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
@@ -35,10 +35,10 @@ permalink: /team
           <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
-          Jany Doe
+          Lázaro Mendez
         </h4>
         <p>
-          App Developer , Technext
+          Empleado
         </p>
       </div>
   </div>
@@ -48,10 +48,10 @@ permalink: /team
         <img src="../assets/img/team/member3.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        John Doe
+        Gabriela Ortega
       </h4>
       <p>
-        Android Developer , Technext
+        Empleada
       </p>
     </div>
     <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
@@ -59,10 +59,10 @@ permalink: /team
         <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        Chris Way
+        Alison Revilla
       </h4>
       <p>
-        iOS Developer , Technext
+        Empleada
       </p>
     </div>
     <div class="blockquote-box animated wow fadeInRight clearfix">
@@ -70,10 +70,10 @@ permalink: /team
         <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        Christopher
+        Jeremi González
       </h4>
       <p>
-        Web Developer , Technext
+        Empleado
       </p>
       </div>
     </div>
