--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ published: true
           <form action="http://templates.designorbital.com/baleen/contact.php" method="post" id="contact-form">
             <fieldset>
               <div class="form-group form-group-fullname">
-                <label class="control-label" for="fullname">NAME *</label>
+                <label class="control-label" for="fullname">NOMBRE *</label>
                 <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Enter Your Name">
               </div>
               <div class="form-group form-group-email">
@@ -53,7 +53,7 @@ published: true
                 <input type="text" class="form-control" name="email" id="email" placeholder="Enter Your E-Mail">
               </div>
               <div class="form-group form-group-message">
-                <label class="control-label" for="message">MESSAGE *</label>
+                <label class="control-label" for="message">COMENTARIO *</label>
                 <textarea class="form-control" name="message" id="message" rows="3"></textarea>
               </div>           
               <button type="submit" class="btn btn-primary">Submit</button>
