--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@ published: true
                 <label class="control-label" for="message">COMENTARIO *</label>
                 <textarea class="form-control" name="message" id="message" rows="3"></textarea>
               </div>           
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Envíar</button>
             </fieldset>
           </form>
           
