--- a/contact.html
+++ b/contact.html
@@ -46,15 +46,15 @@ published: true
             <fieldset>
               <div class="form-group form-group-fullname">
                 <label class="control-label" for="fullname">NOMBRE *</label>
-                <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Enter Your Name">
+                <input type="text" class="form-control" name="fullname" id="fullname" placeholder="Ingresa tú nombre">
               </div>
               <div class="form-group form-group-email">
                 <label class="control-label" for="email">E-MAIL *</label>
-                <input type="text" class="form-control" name="email" id="email" placeholder="Enter Your E-Mail">
+                <input type="text" class="form-control" name="email" id="email" placeholder="Ingresa tú E-Mail">
               </div>
               <div class="form-group form-group-message">
-                <label class="control-label" for="message">COMENTARIO *</label>
-                <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+                <label class="control-label" for="message">COMENTARIOS *</label>
+                <textarea class="form-control" name="message" id="Comentrios" rows="3"></textarea>
               </div>           
               <button type="submit" class="btn btn-primary">Envíar</button>
             </fieldset>
