--- a/team.html
+++ b/team.html
@@ -70,5 +70,13 @@ permalink: /team
         <img src="../assets/img/team/member1.png" alt="Feature-img" height="80" width="100">
       </div>
       <h4>
-        
+        Jeremi González
+      </h4>
+      <p>
+        Empleado
+      </p>
+      </div>
+    </div>
+  </div>
+</div>
 <!--End Main Container -->
