--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@ permalink: /team
     <div class="col-md-6">
       <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
+          <img src="../assets/img/team/Ale.jpeg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Alejandra Lorenzo
