--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@ permalink: /team
       </div>
       <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member1.png" alt="Santi.jpeg" height="80" width="100">
+          <img src="../assets/img/team/anti.jpeg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Erick González
@@ -32,7 +32,7 @@ permalink: /team
       </div>
       <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
         <div class="square pull-left">
-          <img src="../assets/img/team/member2.png" alt="Feature-img" height="80" width="100">
+          <img src="../assets/img/team/Lazaro.jpeg" alt="Feature-img" height="80" width="100">
         </div>
         <h4>
           Lázaro Mendez
