--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about
 <!-- Main Container -->
 
 <div class="row container-kamn">
-  <img src="assets/img/slider/welcome little one!.png" class="blog-post" alt="Feature-img" align="right" width="100%"> 
+  <img src="assets/img/slider/WhatsApp Image 2023-12-06 at 18.17.50.jpeg" class="blog-post" alt="Feature-img" align="right" width="100%"> 
 </div>
 
 <div id="banners"></div>
