--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about
 <!-- Main Container -->
 
 <div class="row container-kamn">
-  <img src="assets/img/slider/WhatsApp Image 2023-12-06 at 18.17.50.jpeg" class="blog-post" alt="Feature-img" align="right" width="100%"> 
+  <img src="assets/img/slider/Post de Instagram Feliz Navidad Ilustrativo Verde y Beige.jpg" class="blog-post" alt="Feature-img" align="right" width="100%"> 
 </div>
 
 <div id="banners"></div>
@@ -15,7 +15,7 @@ permalink: /about
     <div class="side-left col-sm-4 col-md-4">
       <h3 class="lead">  PAPELERÍA TRÉBOL </h3><hr>
 
-      <p>A continuación te explicaremos un poco sobre lo que nuestra papelería te ofrece:</p>
+      <p>Consulta:</p>
       <a href="#anchor1"> Servicios</a><br>
       <a href="#anchor2"> Formas de pago</a><br>
       <a href="#anchor3">Horarios</a><br>
