--- a/about.html
+++ b/about.html
@@ -21,27 +21,19 @@ permalink: /about
       <a href="#anchor3">Horarios</a><br>
       <br>
       <h4>2020 :</h4><hr>
-      Nuestros inicios son a partir del año 2020 a principios de pandemia, poco a poco nuestro megocio ha ido creciendo y prosperando. Agradecemos a todos nuestros clientes por su preferencia y confianza.
+      Agradecemos a todos nuestros clientes por su preferencia y confianza.
     </div>
     <div class="col-sm-8 col-md-8">
         <h3 class="lead"id="anchor1"> Servicios </h3><hr>
         <p>
-        Además de contar con objetos o mercancía de papelería (objetos básicos), sacamos impresiones, copias, engargolados..., también ofrecemos algunos otros servicios:
+        Contamos con servicios extras; impresiones, escaneos, engrgolados, enmicados, etc. También:
         </p>
 
         <h4>DOCUMENTOS ACTUALIZADOS</h4>
-        <p>Si tienes que actualizar algún documento pero no quieres ir a los lugares que te mandan, nosotros podemos ayudarte´, algunos de estos documentos tienen una comisión.
-          <p>
-      -Actualizamos actas de nacimiento, su precio varía dependiendo del estado del acta, con una comisión de $30.
-          </p>  
-          <p>
-      -CURP actualizada, solo necesitamos tu curp en caso de que la tengas o tus datos personales.
-          </p>
-          <p>
-      -Número de seguro social
+        <p>Actualizamos documentos oficiales como el RFC, CURP, Actas actualizadas, recibos de luz, etc. Cualquiera de estos documentos es 100% legal, trabajamos con un gestor, así que recuerda que en caso de requerir este servicio se te cobrará una comsión, pero tendras la seguridad de que tu documento es totalmente válido y legal 
          </p>   
-        <h4>Inscripciones</h4>
-        <p>Realizamos inscripciones de SAID a kinder, primaria y secundaria para alumnos de nuevo ingreso. Ahora también hacemos registros para nivel medio superios COMIPEMS.</p>
+        <h4>REGALOS Y MANUALIDADES</h4>
+        <p>Puedes hacer</p>
 
         <h4>Trabajos de investigación</h4>
         <p>
